# dinorunner

./: .clang-format  .gitignore  Dockerfile  LICENSE.md  README.md  dinorunner_highscore.txt  docker-compose.yml
.devcontainer/: devcontainer.json
demo/: CMakeLists.txt
demo/sdl/: demo.c
dinorunner/: CMakeLists.txt
dinorunner/cmake/: dinorunnerConfig.cmake  dinorunnerConfig.cmake.in
dinorunner/include/: dinorunner.h
dinorunner/src/: clouds.c  dinorunner.c  distance_meter.c  game_over_panel.c  horizon.c  horizon_line.c  nightmode.c  obstacle.c  sprites.c  trex.c  utils.c  version.c  version.c.in
